--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,8 @@ sonar.projectName=starwars-api-go
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+sonar.exclusions=**/*_test.go,**/vendor/**
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
