--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
 sonar.projectKey=EddieSCJ_starwars-api-go
 sonar.organization=eddiescj-go
 
-This is the name and version displayed in the SonarCloud UI.
+#This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=starwars-api-go
 # sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/vendor/**
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
