--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -22,12 +22,12 @@ jobs:
     name: Codecov
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v2
         with:
-          go-version: '1.18'
+          go-version: 1.18
       - name: Run coverage
         run: go test -race -coverprofile=coverage.txt -covermode=atomic
       - name: Upload coverage to Codecov
