--- a/codecov.yml
+++ b/codecov.yml
@@ -9,14 +9,17 @@ comment:
 coverage:
   precision: 2
   range: 80...100
-  round: up
+  round: down
   status:
     changes: false
     default_rules:
       flag_coverage_not_uploaded_behavior: include
-    patch: true
-    project: true
-
+    patch:
+      default:
+        target: 80...100
+    project:
+      default:
+        target: 80%
 github_checks:
   annotations: true
 
