--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -29,7 +29,8 @@ jobs:
         with:
           go-version: 1.18
       - name: Run coverage
-        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic -tags integration
+        run: docker ps
+#        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic -tags integration
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
   golangci:
