--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -31,7 +31,7 @@ jobs:
       - name: check
         run: docker ps
       - name: Run coverage
-        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic -tags integration && docker ps
+        run: go test ./... -tags integration
       - name: check
         run: docker ps
       - name: Upload coverage to Codecov
