refactor: adjusting linter requirements

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -59,6 +59,8 @@ linters:
     - goconst
     - gocritic
     - gofmt
+    - goimports
+    - gomnd
     - goprintffuncname
     - govet
     - gosimple
