--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -46,3 +46,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3.1.0
+  snyk:
+    name: Security Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - uses: actions/checkout@v3
+      - name: Snyk
+        uses: snyk/actions@0.3.0
+
