--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -56,4 +56,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Snyk
         uses: snyk/actions@0.3.0
+        run: snyk test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
