--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -50,12 +50,12 @@ jobs:
     name: Security Check
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: 1.18
-      - uses: actions/checkout@v3
       - name: Snyk
-        uses: snyk/actions@0.3.0
+      - uses: snyk/actions@0.3.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
